crates/ruff_python_parser/tests/snapshots/valid_syntax@iter_unpack_yield_py37.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/iter_unpack_yield_py37.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..92,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 43..59,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 43..47,
                                id: Name("rest"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 50..59,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 51..52,
                                        value: Int(
                                            4,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 54..55,
                                        value: Int(
                                            5,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 57..58,
                                        value: Int(
                                            6,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 60..91,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("g"),
                        range: 64..65,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 65..67,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 69..91,
                                value: Yield(
                                    ExprYield {
                                        node_index: NodeIndex(None),
                                        range: 69..91,
                                        value: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 75..91,
                                                    elts: [
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 76..77,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 79..80,
                                                                value: Int(
                                                                    2,
                                                                ),
                                                            },
                                                        ),
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 82..83,
                                                                value: Int(
                                                                    3,
                                                                ),
                                                            },
                                                        ),
                                                        Starred(
                                                            ExprStarred {
                                                                node_index: NodeIndex(None),
                                                                range: 85..90,
                                                                value: Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 86..90,
                                                                        id: Name("rest"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
